--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=acme-api-employee
 server.port=8082
 
+eureka.client.service-url.defaultZone=http://discovery-node:8761/eureka
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/acme
+spring.datasource.url=jdbc:postgresql://db-node:5432/acme
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -11,7 +13,7 @@ spring.jpa.hibernate.show-sql=true
 
 logging.level.org.hibernate.SQL=debug
 
-spring.datasource.initialization-mode=never
+spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
 spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
