--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=acme-api-employee
-spring.config.import = optional:configserver:http://localhost:8888
-spring.profiles.active=dev
+spring.config.import = optional:configserver:http://config-node:8888
+spring.profiles.active=prod
 
 #server.port=8082
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka
