--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.2</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.acme.backend</groupId>
 	<artifactId>acme-backend</artifactId>
@@ -51,6 +52,23 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+			<version>2.4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -61,21 +79,16 @@
 			</plugin>
 		</plugins>
 	</build>
-   
-   <distributionManagement>
-      <snapshotRepository>
-         <id>acme-repo</id>
-         <url>http://localhost:8081/repository/acme-repo/</url>
-      </snapshotRepository>
-   </distributionManagement>
 
-  <!--  <repositories>
-      <repository>
-         <id>acme-repo</id>
-         <url>http://localhost:8081/repository/acme-repo/</url>
-      </repository>
-      
-   </repositories> -->
+	<distributionManagement>
+		<snapshotRepository>
+			<id>acme-repo</id>
+			<url>http://localhost:8081/repository/acme-repo/</url>
+		</snapshotRepository>
+	</distributionManagement>
+
+	<!-- <repositories> <repository> <id>acme-repo</id> <url>http://localhost:8081/repository/acme-repo/</url> 
+		</repository> </repositories> -->
 
 	<dependencyManagement>
 		<dependencies>
